Bug 523129 - Java's AppletContext.showDocument() doesn't work on 1.9.2 branch. r=josh a=blocking1.9.2+