modules/plugin/base/src/nsPluginHost.cpp
@@ -2776,6 +2776,12 @@ nsresult nsPluginHost::GetURLWithHeaders(nsISupports* pluginInst,
 
   nsresult rv;
   nsCOMPtr<nsIPluginInstance> instance = do_QueryInterface(pluginInst, &rv);
+#ifdef OJI
+  if (NS_FAILED(rv)) {
+    nsCOMPtr<nsIPluginInstanceOld> instanceOld(do_QueryInterface(pluginInst));
+    rv = NewForOldPluginInstance(instanceOld, getter_AddRefs(instance));
+  }
+#endif
   if (NS_SUCCEEDED(rv))
     rv = DoURLLoadSecurityCheck(instance, url);
 
@@ -2826,6 +2832,12 @@ NS_IMETHODIMP nsPluginHost::PostURL(nsISupports* pluginInst,
    return NS_ERROR_ILLEGAL_VALUE;
 
   nsCOMPtr<nsIPluginInstance> instance = do_QueryInterface(pluginInst, &rv);
+#ifdef OJI
+  if (NS_FAILED(rv)) {
+    nsCOMPtr<nsIPluginInstanceOld> instanceOld(do_QueryInterface(pluginInst));
+    rv = NewForOldPluginInstance(instanceOld, getter_AddRefs(instance));
+  }
+#endif
   if (NS_SUCCEEDED(rv))
     rv = DoURLLoadSecurityCheck(instance, url);
 
@@ -4402,6 +4414,69 @@ NS_IMETHODIMP nsPluginHost::SetCookie(const char* inCookieURL, const void* inCoo
   cookie[inCookieSize] = '\0';
   rv = cookieService->SetCookieString(uriIn, prompt, cookie, nsnull);
   cookie[inCookieSize] = c;
+
+  return rv;
+}
+
+// Helper method
+
+// Given an nsIPluginInstanceOld pointer, return a pointer to its
+// corresponding nsIPluginInstance object (the one whose mShadow member is
+// the nsIPluginInstanceOld pointer).
+//
+// Here we assume that the nsPIPluginInstancePeer::GetOwner() and
+// nsIPluginInstanceOwner::GetInstance() methods will never be called
+// from an "old" plugin instance (an instance of nsIPluginInstanceOld).
+// If this were to happen, the plugin would get an instance pointer
+// that it couldn't use (it would need and expect an nsIPluginInstanceOld
+// pointer, but get an nsIPluginInstance pointer instead).  The JEP's
+// MRJPlugin.plugin doesn't use either of these two methods.  And given
+// that the nsPIPluginInstancePeer interface is "private", I don't expect
+// that other XPCOM/OJI plugins use it, either.  But if we ever load one
+// that does, we'll need to change the nsIPluginInstanceOwner::GetInstance()
+// method to return a different result depending on whether or not its
+// mInstance member has an mShadow member.  And we'll also need to change
+// this code.
+//
+// This method is (of course) always called from the browser.
+nsresult
+nsPluginHost::NewForOldPluginInstance(nsIPluginInstanceOld* aInstanceOld, nsIPluginInstance** aInstance)
+{
+  if (!aInstance)
+    return NS_ERROR_NULL_POINTER;
+
+  *aInstance = nsnull;
+
+  if (!aInstanceOld)
+    return NS_ERROR_FAILURE;
+
+  nsCOMPtr<nsIPluginInstancePeer> peer;
+  nsresult rv = aInstanceOld->GetPeer(getter_AddRefs(peer));
+  if (NS_SUCCEEDED(rv) && !peer)
+    rv = NS_ERROR_FAILURE;
+  if (NS_FAILED(rv))
+    return rv;
+
+  nsCOMPtr<nsPIPluginInstancePeer> privpeer = do_QueryInterface(peer, &rv);
+  if (NS_SUCCEEDED(rv) && !privpeer)
+    rv = NS_ERROR_FAILURE;
+  if (NS_FAILED(rv))
+    return rv;
+
+  nsCOMPtr<nsIPluginInstanceOwner> owner;
+  rv = privpeer->GetOwner(getter_AddRefs(owner));
+  if (NS_SUCCEEDED(rv) && !owner)
+    rv = NS_ERROR_FAILURE;
+  if (NS_FAILED(rv))
+    return rv;
+
+  nsIPluginInstance* instance = nsnull;
+  rv = owner->GetInstance(instance);
+  if (NS_SUCCEEDED(rv) && !instance)
+    rv = NS_ERROR_FAILURE;
+
+  if (NS_SUCCEEDED(rv))
+    *aInstance = instance;
 
   return rv;
 }
